# media_compressor

./: .gitignore  README.md  main.py  pyproject.toml
