[project]
name = "media-compressor"
version = "1.0.0"
description = "A powerful batch media compressor for Video and Images with smart detection and safety features"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.12"
keywords = ["video", "image", "compression", "ffmpeg", "hevc", "h265", "webp", "batch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0,<14.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
media-compressor = "main:main"

[project.urls]
Homepage = "https://github.com/Initsnow/media-compressor"
Repository = "https://github.com/Initsnow/media-compressor"
Issues = "https://github.com/Initsnow/media-compressor/issues"
